--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,6 @@
 #
 # *** = Modules created for SIMP 6.3+ are not required to support Puppet < 5.5
 # ^^^ = SIMP doesn't support 6 yet; tests are info-only and allowed to fail
-
 ---
 language: ruby
 cache: bundler
@@ -42,6 +41,58 @@ before_install:
 global:
   - STRICT_VARIABLES=yes
 
+jobs:
+  allow_failures:
+    - name: 'Latest Puppet 6.x (allowed to fail)'
+
+  include:
+    - stage: check
+      rvm: 2.4.4
+      env: PUPPET_VERSION="~> 5"
+      script:
+        - bundle exec rake check:dot_underscore
+        - bundle exec rake check:test_file
+        - bundle exec rake pkg:check_version
+        - bundle exec rake metadata_lint
+        - bundle exec rake pkg:compare_latest_tag
+        - bundle exec rake pkg:create_tag_changelog
+        - bundle exec rake lint
+        - bundle exec puppet module build
+
+    - stage: spec
+      name: 'Puppet 4.10 (SIMP 6.2, PE 2016.4)'
+      rvm: 2.1.9
+      env: PUPPET_VERSION="~> 4.10.0"
+      script:
+        - bundle exec rake spec
+
+    - stage: spec
+      name: 'Puppet 5.3 (PE 2017.3)'
+      rvm: 2.4.4
+      env: PUPPET_VERSION="~> 5.3.0"
+      script:
+        - bundle exec rake spec
+
+    - stage: spec
+      rvm: 2.4.4
+      name: 'Puppet 5.5 (SIMP 6.3, PE 2018.1)'
+      env: PUPPET_VERSION="~> 5.5.0"
+      script:
+        - bundle exec rake spec
+
+    - stage: spec
+      name: 'Latest Puppet 5.x'
+      rvm: 2.4.4
+      env: PUPPET_VERSION="~> 5.0"
+      script:
+        - bundle exec rake spec
+
+    - stage: spec
+      name: 'Latest Puppet 6.x (allowed to fail)'
+      rvm: 2.5.1
+      env: PUPPET_VERSION="~>6.0"
+      script:
+        - bundle exec rake spec
     - stage: deploy
       rvm: 2.4.1
       script:
